# fcpo-ai-trading-system

./: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_initial_signal_table.py
deployment/: Dockerfile  docker-compose.yml  nginx.conf
scripts/: backtest.py  train_model.py
src/fcpo_trading/: main.py
src/fcpo_trading/api/: dependencies.py
src/fcpo_trading/api/middleware/: error_middleware.py  logging_middleware.py
src/fcpo_trading/api/routes/: health.py  metrics.py  signals.py  webhook.py
src/fcpo_trading/core/: config.py  exceptions.py  logging.py
src/fcpo_trading/ml/: model.py  preprocessing.py
src/fcpo_trading/schemas/: signal.py
src/fcpo_trading/services/: ml_service.py  observer.py  repositories.py  signal_service.py  strategy.py
tests/: conftest.py
tests/integration/: test_webhook.py
tests/unit/: test_ml_service.py
