[project]
name = "fcpo-ai-trading-system"
version = "0.1.0"
description = "AI-powered FCPO trading backend with FastAPI + TradingView webhooks"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py310"]
include = "src"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E203", "W503"]
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
plugins = []
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
mypy_path = "src"
